--- a/src/main/res/layout/activity_login.xml
+++ b/src/main/res/layout/activity_login.xml
@@ -44,7 +44,7 @@
     <TextView
         android:id="@+id/login_res_msg"
         android:layout_width="0dp"
-        android:layout_height="148dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:textAlignment="center"
