--- a/src/main/res/layout/activity_search.xml
+++ b/src/main/res/layout/activity_search.xml
@@ -22,13 +22,13 @@
 
     <TextView
         android:id="@+id/search_resp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/search_bar"
-        android:layout_marginStart="13dp"
         android:layout_marginTop="47dp"
-        android:text="Response:" />
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"/>
 
     <Button
         android:id="@+id/search_btn"
@@ -37,5 +37,16 @@
         android:layout_below="@+id/search_bar"
         android:layout_centerHorizontal="true"
         android:text="Search" />
+
+    <Button
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="34dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="Logout"
+        android:textColor="@android:color/white"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/search_btn" />
 
 </RelativeLayout>
