--- a/src/main/res/layout/movie_list.xml
+++ b/src/main/res/layout/movie_list.xml
@@ -19,6 +19,12 @@
             android:layout_alignParentTop="true"
             android:layout_weight="1" />
 
+        <TextView
+            android:id="@+id/pageCount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
